# Marki-main

./: .gitignore  FREE_TOOLS.md  PAID_TOOLS.md  README.md  styleguide.md
relance/: TESTS-FINAL-REPORT.md  TESTS-REPORT.md  fix-frontend-workflows.py  index.html  migrate_backend_data.sh  migrate_backend_data_with_relations.sh  migrate_final.sh  migrate_parse_data.sh  migrate_parse_to_yaml.sh  migrate_with_includes.sh  run-all-tests.sh  todo-migration-sqlite.md  todo.md  update-frontend-workflows.py  update-specs.py
relance2/: !  AUDIT_COMPARAISON.md  AUDIT_SERVEUR.json  AUDIT_SERVEUR.md  AUDIT_WORKFLOWS_SPECS.md  CONSOLE_REPORT_SUMMARY.md  IMPLEMENTATION_DETAILS.md  LOGS_REFONTE.md  MIGRATION_STATUS.md  REPORT_COMPLETE_20260716_211117.json  REPORT_COMPLETE_20260716_211117.md  REPORT_CONSOLE_LOGS_20260716_205614.json  REPORT_CONSOLE_LOGS_20260716_205614.txt  REPORT_URL_NETWORK_CONSOLE_20260716_205857.json  REPORT_URL_NETWORK_CONSOLE_20260716_205857.md  REPORT_URL_NETWORK_CONSOLE_20260716_210138.json  REPORT_URL_NETWORK_CONSOLE_20260716_210138.md  REPORT_URL_NETWORK_CONSOLE_20260716_210318.json  REPORT_URL_NETWORK_CONSOLE_20260716_210318.md  REPORT_URL_NETWORK_CONSOLE_20260716_210455.json  SCHEDULER.md  TODO.md  (+36 more)
relance2/DrDice/: README.md  pyproject.toml  setup.py
relance2/DrDice/drdice/: __init__.py  __main__.py  cli.py
relance2/DrDice/drdice/commands/: __init__.py  build.py  dev.md  dev.py  dev2.md  dev2.py  generate.py  init.py
relance2/DrDice/drdice/core/: __init__.py  cell.py  project.py  yaml_builder.py
relance2/DrDice/drdice/utils/: __init__.py  colors.py
(+18029 files in other folders)
