[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drdice"
version = "1.0.0"
description = "Outils de génération et développement de cells MVC"
authors = [{name = "DrDice", email = "dev@drdice.io"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
drdice = "drdice.cli:main"

[project.entry-points.console_scripts]
drdice-generate = "drdice.commands.generate:main"
drdice-build = "drdice.commands.build:main"
drdice-init = "drdice.commands.init:main"
drdice-dev = "drdice.commands.dev:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drdice*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
